OPA Policies/Deny-PrivilegeContainers/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: block-privilege-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
