OPA Policies/Deny-PrivilegeContainers/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spspprivilegedcontainer
spec:
  crd:
    spec:
      names:
        kind: K8sPSPPrivilegedContainer
      validation:
targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
package k8spspprivileged
deny[msg] { 
c := input_containers[_] c.securityContext.privileged msg := sprintf("Privileged container is not allowed: %v, securityContext: %v", [c.name, c.securityContext]) } 
input_containers[c] { 
c := input.request.object.spec.containers[_] } input_containers[c] {
c := input.request.object.spec.initContainers[_] }
